<?xml version="1.0"?>
<package format="2">
  <name>decision_maker_panel</name>
  <version>1.12.0</version>
  <description>The decision_maker_panel package</description>
  <maintainer email="azumi.suzuki@tier4.jp">Azumi Suzuki</maintainer>
  <author>Yusuke FUJII</author>
  <author>h_ohta</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
