<?xml version="1.0"?>
<package format="2">
  <name>points2image</name>
  <version>1.12.0</version>
  <description>The points2image package</description>
  <maintainer email="syoshida@axe.bz">Syohei YOSHIDA</maintainer>
  <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>fastvirtualscan</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rosinterface</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
