<?xml version="1.0"?>
<package format="2">
  <name>autoware_rviz_plugins</name>
  <version>1.12.0</version>
  <description>The autoware_rviz_plugins package</description>
  <maintainer email="yusuke.fujii@tier4.jp">Yusuke FUJII</maintainer>
  <author>Yusuke FUJII</author>
  <author>h_ohta</author>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
