<?xml version="1.0"?>
<package format="2">
  <name>vehicle_description</name>
  <version>1.12.0</version>
  <description>The vehicle_description package</description>
  <maintainer email="masaya.kataoka@tier4.jp">Masaya Kataoka</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
</package>
